logs/mobility/build.make.014.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In member function ‘void DropOffController::calculateDecision()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:98:17: error: ‘print’ was not declared in this scope
 print("lol true");
                 ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
